# ollama-bar

./: .coveragerc  .gitignore  .isort.cfg  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: build-app.yml  build-library.yml  lint-code.yml  publish-library.yml
ollama_bar/: __main__.py  command_display_window.py  ollama_bar_app.py  output_capture.py  process_monitor.py  webui.py
scripts/: build_app.sh  install_app.sh  lint.sh  run_tests.sh
tests/: test_command_display_window.py  test_ollama_bar_app.py  test_process_monitor.py  test_webui.py
